search bar alignment fix for @vincentiadevaia, YOURE WELCOME

--- a/app/assets/stylesheets/partials/_nav-search.scss
+++ b/app/assets/stylesheets/partials/_nav-search.scss
@@ -1,5 +1,5 @@
 .nav-search-form {
-  margin-top: 2px;
+  margin-top: 1px;
 }
 
 .nav-search-form-text {
@@ -27,7 +27,7 @@
     font-size: 1.1em;
     border: none;
     background: transparent;
-    padding:.5em .7em 0.4em 2.1em;
+    padding: 0.45em 0.7em 0.5em 2.1em;
     width: 100%;
 
     &:focus {
